--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jni-simple"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
@@ -12,6 +12,9 @@ repository = "https://github.com/AlexanderSchuetz97/jni-simple"
 exclude = [
     "example_project/*"
 ]
+
+[package.metadata.docs.rs]
+all-features = true
 
 [dependencies]
 libloading = { version = "^0.8.4", optional = true }
