--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,12 @@ all-features = true
 
 [dependencies]
 libloading = { version = "^0.8.5", optional = true }
+sync-ptr = "^0.1.1"
 once_cell = "^1.19.0"
+
+[dev-dependencies]
+static_assertions = "1.1.0"
+
 
 [features]
 asserts = []
