--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,9 @@ exclude = [
 all-features = true
 
 [dependencies]
-libloading = { version = "^0.8.5", optional = true }
-sync-ptr = "^0.1.1"
-once_cell = "^1.20.2"
+libloading = { version = "^0.8.6", optional = true }
+sync-ptr = "^0.1.3"
+once_cell = "^1.20.3"
 
 [dev-dependencies]
 static_assertions = "1.1.0"
@@ -28,4 +28,5 @@ static_assertions = "1.1.0"
 
 [features]
 asserts = []
+dynlink = []
 loadjvm = ["libloading"]
