--- a/example_project/rust/rust-jni-example/Cargo.toml
+++ b/example_project/rust/rust-jni-example/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-jni-simple = { path = "../../.." } # Use real version when publishing
+jni-simple = { path = "../../..", features = ["dynlink"] } # Use real version when publishing
