--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
-keywords = ["jni", "java", "ffi"]
+keywords = ["jni", "java", "ffi", "jvmti"]
 categories = ["api-bindings"]
 description = "Simple Rust wrapper around the JNI (Java Native Interface) API."
 readme = "README.md"
