--- a/example_project/rust/rust-jni-example/Cargo.toml
+++ b/example_project/rust/rust-jni-example/Cargo.toml
@@ -3,8 +3,15 @@ name = "rust-jni-example"
 version = "0.1.0"
 edition = "2021"
 
+
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
 jni-simple = { path = "../../..", features = ["dynlink"] } # Use real version when publishing
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+panic = "abort"
