--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT OR Apache-2.0"
 authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
 keywords = ["jni", "java", "ffi", "jvmti"]
 categories = ["api-bindings"]
-description = "Simple Rust wrapper around the JNI (Java Native Interface) API."
+description = "Simple Rust binding for the JNI (Java Native Interface) API."
 readme = "README.md"
 repository = "https://github.com/AlexanderSchuetz97/jni-simple"
 exclude = [
