--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
 keywords = ["jni", "java", "ffi", "jvmti"]
-categories = ["api-bindings"]
+categories = ["api-bindings", "no-std"]
 description = "Simple Rust binding for the JNI (Java Native Interface) API."
 readme = "README.md"
 repository = "https://github.com/AlexanderSchuetz97/jni-simple"
@@ -28,6 +28,8 @@ static_assertions = "1.1.0"
 
 
 [features]
-asserts = []
+default = ["std"]
+std = []
+asserts = ["std"]
 dynlink = []
-loadjvm = ["libloading"]
+loadjvm = ["libloading", "std"]
