--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,22 +10,53 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build no-std
+        run: cargo build --verbose --no-default-features
+      - name: Build no-std+dynlink
+        run: cargo build --verbose --no-default-features --features dynlink
+      - name: Build default
+        run: cargo build --verbose
+      - name: Build asserts
+        run: cargo build --verbose --features asserts
+      - name: Build asserts+dynlink
+        run: cargo build --verbose --features asserts,dynlink
+      - name: Build loadjvm
+        run: cargo build --verbose --features loadjvm
+      - name: Build asserts+loadjvm
+        run: cargo build --verbose --features asserts,loadjvm
+
+  miri:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Test with miri
+        run: cargo +nightly miri test --verbose
+
+  no-jvm-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run tests that dont need a jvm
+        run: cargo test --verbose --release
+
   linux-jdk8:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '8'
-    - name: Build JVMTI Shim
-      run: cd jvmti_shim && cargo build --release
-    - name: Build
-      run: cargo build --verbose --features loadjvm,asserts
-    - name: Run tests with asserts
-      run: cargo test --verbose --release --features loadjvm,asserts
-    - name: Run tests without asserts
-      run: cargo test --verbose --release --features loadjvm
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '8'
+      - name: Build JVMTI Shim
+        run: cd jvmti_shim && cargo build --release
+      - name: Run tests with asserts
+        run: cargo test --verbose --release --features loadjvm,asserts
+      - name: Run tests without asserts
+        run: cargo test --verbose --release --features loadjvm
 
   linux-jdk-11:
     runs-on: ubuntu-latest
@@ -37,8 +68,6 @@ jobs:
           java-version: '11'
       - name: Build JVMTI Shim
         run: cd jvmti_shim && cargo build --release
-      - name: Build
-        run: cargo build --verbose --features loadjvm,asserts
       - name: Run tests with asserts
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
@@ -54,8 +83,6 @@ jobs:
           java-version: '17'
       - name: Build JVMTI Shim
         run: cd jvmti_shim && cargo build --release
-      - name: Build
-        run: cargo build --verbose --features loadjvm,asserts
       - name: Run tests with asserts
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
@@ -71,8 +98,6 @@ jobs:
           java-version: '21'
       - name: Build JVMTI Shim
         run: cd jvmti_shim && cargo build --release
-      - name: Build
-        run: cargo build --verbose --features loadjvm,asserts
       - name: Run tests with asserts
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
@@ -88,8 +113,6 @@ jobs:
           java-version: '24'
       - name: Build JVMTI Shim
         run: cd jvmti_shim && cargo build --release
-      - name: Build
-        run: cargo build --verbose --features loadjvm,asserts
       - name: Run tests with asserts
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
