--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,36 @@
 [package]
 name = "jni-simple"
-version = "0.2.1"
-edition = "2021"
+version = "0.3.0"
+edition = "2024"
+rust-version = "1.87.0"
 license = "MIT OR Apache-2.0"
 authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
-keywords = ["jni", "java", "ffi"]
-categories = ["api-bindings"]
-description = "Simple Rust wrapper around the JNI (Java Native Interface) API."
+keywords = ["jni", "java", "ffi", "jvmti"]
+categories = ["api-bindings", "no-std"]
+description = "Simple Rust binding for the JNI (Java Native Interface) API."
 readme = "README.md"
 repository = "https://github.com/AlexanderSchuetz97/jni-simple"
 exclude = [
     "example_project/*",
-    "loop_test.sh"
+    "loop_test.sh",
+    "jvmti_shim/target"
 ]
 
 [package.metadata.docs.rs]
 all-features = true
 
 [dependencies]
-libloading = { version = "^0.8.6", optional = true }
-sync-ptr = "^0.1.3"
-once_cell = "^1.20.3"
+libloading = { version = "^0.8.8", optional = true }
+sync-ptr = "^0.1.4"
+once_cell = "^1.21.3"
 
 [dev-dependencies]
 static_assertions = "1.1.0"
 
 
 [features]
-asserts = []
+default = ["std"]
+std = []
+asserts = ["std"]
 dynlink = []
-loadjvm = ["libloading"]
+loadjvm = ["libloading", "std"]
