--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,14 @@ license = "MIT OR Apache-2.0"
 authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
 keywords = ["jni", "java", "ffi", "jvmti"]
 categories = ["api-bindings", "no-std"]
-description = "Simple Rust binding for the JNI (Java Native Interface) API."
+description = "Simple Rust binding for JNI (Java Native Interface) and JVMTI (JVM Tool Interface)"
 readme = "README.md"
 repository = "https://github.com/AlexanderSchuetz97/jni-simple"
 exclude = [
     "example_project/*",
     "loop_test.sh",
-    "jvmti_shim/target"
+    "jvmti_shim/target",
+    "bitfield_gen/*"
 ]
 
 [package.metadata.docs.rs]
