--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -138,14 +138,14 @@ jobs:
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
 
-  linux-jdk-25:
+  linux-jdk-24:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '25'
+          java-version: '24'
       - name: Build JVMTI Shim
         run: cd jvmti_shim && cargo build --release
       - name: Run tests with asserts
@@ -153,14 +153,14 @@ jobs:
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
 
-  macos-jdk-25:
+  macos-jdk-24:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '25'
+          java-version: '24'
       - name: Build JVMTI Shim
         run: cd jvmti_shim && cargo build --release
       - name: Run tests with asserts
@@ -214,7 +214,7 @@ jobs:
         run: cargo test --verbose --release --features loadjvm
 
   macos-jdk-8:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -228,14 +228,14 @@ jobs:
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
 
-  windows-jdk-25:
+  windows-jdk-24:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '25'
+          java-version: '24'
       - name: Build JVMTI Shim
         run: cd jvmti_shim && cargo build --release
       - name: Run tests with asserts
@@ -288,7 +288,6 @@ jobs:
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
 
-
   windows-jdk-8:
     runs-on: windows-latest
     steps:
@@ -304,22 +303,6 @@ jobs:
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
 
-
-  windows-arm-jdk-25:
-    runs-on: windows-11-arm
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '25'
-      - name: Build JVMTI Shim
-        run: cd jvmti_shim && cargo build --release
-      - name: Run tests with asserts
-        run: cargo test --verbose --release --features loadjvm,asserts
-      - name: Run tests without asserts
-        run: cargo test --verbose --release --features loadjvm
-
   windows-arm-jdk-21:
     runs-on: windows-11-arm
     steps:
@@ -328,51 +311,6 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
-      - name: Build JVMTI Shim
-        run: cd jvmti_shim && cargo build --release
-      - name: Run tests with asserts
-        run: cargo test --verbose --release --features loadjvm,asserts
-      - name: Run tests without asserts
-        run: cargo test --verbose --release --features loadjvm
-
-  windows-arm-jdk-17:
-    runs-on: windows-11-arm
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Build JVMTI Shim
-        run: cd jvmti_shim && cargo build --release
-      - name: Run tests with asserts
-        run: cargo test --verbose --release --features loadjvm,asserts
-      - name: Run tests without asserts
-        run: cargo test --verbose --release --features loadjvm
-
-  windows-arm-jdk-11:
-    runs-on: windows-11-arm
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-      - name: Build JVMTI Shim
-        run: cd jvmti_shim && cargo build --release
-      - name: Run tests with asserts
-        run: cargo test --verbose --release --features loadjvm,asserts
-      - name: Run tests without asserts
-        run: cargo test --verbose --release --features loadjvm
-
-  windows-arm-jdk-8:
-    runs-on: windows-11-arm
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '8'
       - name: Build JVMTI Shim
         run: cd jvmti_shim && cargo build --release
       - name: Run tests with asserts
