--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ exclude = [
 all-features = true
 
 [dependencies]
-libloading = { version = "^0.8.8", optional = true }
+libloading = { version = "^0.8.9", optional = true }
 sync-ptr = "^0.1.4"
-once_cell = "^1.21.3"
+spin = { version = "0.10.0", default-features = false, features = ["rwlock"] }
 
 [dev-dependencies]
 static_assertions = "1.1.0"
@@ -34,6 +34,6 @@ static_assertions = "1.1.0"
 [features]
 default = ["std"]
 std = []
-asserts = ["std"]
+asserts = []
 dynlink = []
 loadjvm = ["libloading", "std"]
