freebsd ci test

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -337,5 +337,10 @@ jobs:
           version: '14.2'
           run: |
             uname -a
+            ls -lah
+            echo "INSTALLING JAVA"
+            pkg install openjdk21
             echo "SETUP RUST"
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+            . "$HOME/.cargo/env"
+            
