--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -339,7 +339,7 @@ jobs:
             uname -a
             ls -lah
             echo "INSTALLING JAVA"
-            sudo env IGNORE_OSVERSION=yes pkg install openjdk21
+            sudo env IGNORE_OSVERSION=yes pkg install -y openjdk21
             java -version
             echo "SETUP RUST"
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
