--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -344,4 +344,5 @@ jobs:
             echo "SETUP RUST"
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
             . "$HOME/.cargo/env"
+            cargo build
             
