--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -329,12 +329,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: test freebsd 13.4
-        uses: cross-platform-actions/action@v0.27.0
+      - name: test freebsd
+        uses: cross-platform-actions/action@v0.29.0
         with:
           memory: 1024M
           operating_system: freebsd
-          version: '14.2'
+          version: '14.3'
           run: |
             uname -a
             ls -lah
@@ -342,10 +342,10 @@ jobs:
             sudo env IGNORE_OSVERSION=yes pkg install -y openjdk21
             java -version
             ls -lah /usr/local
-            echo $JAVA_HOME
+            export JAVA_HOME=/usr/local/openjdk21
             echo "SETUP RUST"
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
             . "$HOME/.cargo/env"
-            export JAVA_HOME=/usr/local/openjdk21
-            cargo test --features loadjvm
+            cargo test --verbose --release --features loadjvm
+            cargo test --verbose --release --features loadjvm,asserts
             
