--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -366,5 +366,14 @@ jobs:
             uname -a
             ls -lah
             echo "INSTALLING JAVA"
-            sudo pkgin -y install openjdk21
-            java -version
+            sudo pkgin -y install openjdk21 curl
+            /usr/pkg/java/openjdk21/bin/java -version
+            export JAVA_HOME=/usr/local/openjdk21
+            echo "SETUP RUST"
+            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+            . "$HOME/.cargo/env"
+            cd jvmti_shim
+            cargo build --release
+            cd ..
+            cargo test --verbose --release --features loadjvm
+            cargo test --verbose --release --features loadjvm,asserts
