--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,8 @@ jobs:
         run: rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
       - name: Build no-std
         run: cargo build --verbose --no-default-features
+      - name: Build no-std+loadjvm
+        run: cargo build --verbose --no-default-features --features loadjvm
       - name: Build no-std+dynlink
         run: cargo build --verbose --no-default-features --features dynlink
       - name: Build default
@@ -34,6 +36,8 @@ jobs:
         run: cargo clean && cargo +nightly build -Zbuild-std=core,alloc --no-default-features
       - name: Build no-std+dynlink with nightly
         run: cargo clean && cargo +nightly build -Zbuild-std=core,alloc --no-default-features --features dynlink
+      - name: Build no-std+loadjvm with nightly
+        run: cargo clean && cargo +nightly build -Zbuild-std=core,alloc --no-default-features --features loadjvm
 
 
   fmt:
@@ -49,6 +53,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Clippy no-std
         run: cargo clippy --no-default-features -- --deny warnings
+      - name: Clippy no-std+loadjvm
+        run: cargo clippy --no-default-features --features loadjvm -- --deny warnings
       - name: Clippy no-std+dynlink
         run: cargo clippy --no-default-features --features dynlink -- --deny warnings
       - name: Clippy default
@@ -99,6 +105,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   linux-jdk-11:
     runs-on: ubuntu-latest
@@ -114,6 +122,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   linux-jdk-17:
     runs-on: ubuntu-latest
@@ -129,6 +139,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   linux-jdk-21:
     runs-on: ubuntu-latest
@@ -144,6 +156,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   linux-jdk-25:
     runs-on: ubuntu-latest
@@ -159,6 +173,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   macos-jdk-25:
     runs-on: macos-latest
@@ -174,6 +190,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   macos-jdk-21:
     runs-on: macos-latest
@@ -189,6 +207,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   macos-jdk-17:
     runs-on: macos-latest
@@ -204,6 +224,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   macos-jdk-11:
     runs-on: macos-latest
@@ -219,6 +241,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   macos-jdk-8:
     runs-on: macos-13
@@ -234,6 +258,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   windows-jdk-25:
     runs-on: windows-latest
@@ -249,6 +275,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   windows-jdk-21:
     runs-on: windows-latest
@@ -264,6 +292,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   windows-jdk-17:
     runs-on: windows-latest
@@ -279,6 +309,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   windows-jdk-11:
     runs-on: windows-latest
@@ -294,6 +326,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   windows-jdk-8:
     runs-on: windows-latest
@@ -309,6 +343,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   windows-arm-jdk-21:
     runs-on: windows-11-arm
@@ -324,6 +360,8 @@ jobs:
         run: cargo test --verbose --release --features loadjvm,asserts
       - name: Run tests without asserts
         run: cargo test --verbose --release --features loadjvm
+      - name: Run tests without std
+        run: cargo test --verbose --release --no-default-features --features loadjvm
 
   freebsd:
     runs-on: ubuntu-latest
