--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,8 @@ exclude = [
 all-features = true
 
 [dependencies]
-libloading = { version = "^0.8.9", optional = true }
+libloading = { version = "^0.9.0", optional = true, default-features = false }
 sync-ptr = { version = "^0.2.1", features = ["fnptr"] }
-spin = { version = "0.10.0", default-features = false, features = ["rwlock"] }
 
 [dev-dependencies]
 static_assertions = "1.1.0"
@@ -36,4 +35,4 @@ default = ["std"]
 std = []
 asserts = []
 dynlink = []
-loadjvm = ["libloading", "std"]
+loadjvm = ["libloading"]
